--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".FirstFormation"
+            android:label="@string/title_activity_first_formation" >
+        </activity>
+        <activity
+            android:name=".SecondFormation"
+            android:label="@string/title_activity_second_formation" >
+        </activity>
     </application>
 
 </manifest>
